--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:kjTXP34kizfZIkSMV2B0fPsRVVETbjmWQrXo4pC7CPY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
