--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "dnetix/redirection": "^0.4.5",
         "fideloper/proxy": "^4.0",
+        "ixudra/curl": "^6.16",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
